<resources>
    <string name="app_name">PersonActivity</string>
    <string name="First_Name">First Name:-</string>
    <string name="Last_Name">Last Name:-</string>
    <string name="Age">Age:-</string>
    <string name="Email">Email:-</string>
    <string name="Phone">Phone:-</string>
    <string name="Birthdate">Birthdate:-</string>
    <string name="Countryandstate">Country and State:-</string>
    <string name="SET">SET</string>
    <string name="DONE">DONE</string>
    <string name="CANCEL">CANCEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
