<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sushanth.personactivity.MainActivity">

    <Button
        android:text="@string/DONE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:id="@+id/user_done"
        android:onClick="done"
        style="@style/Widget.AppCompat.Button.Colored" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/First_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/user_fname"
                android:hint="Enter your first name" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Last_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/user_lname"
                android:hint="Enter your Last Name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/user_age"
                android:hint="Enter your age" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/user_email"
                android:hint="Enter your Email" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/user_phone"
                android:hint="Enter your Phone number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView17" />

            <Button
                android:text="@string/SET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:onClick="go"
                style="@style/Widget.AppCompat.Button.Colored" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Date selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/displaydate" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Countryandstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18" />

            <Button
                android:text="@string/SET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/countryandstate"
                style="@style/Widget.AppCompat.Button.Colored"
                android:onClick="go1"
                android:elevation="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Place selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeselected" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
